@@ -3,6 +3,8 @@ Release ...
   (contributed by Michael Piotrowski).
 * [nt]roff: Hyphenation patterns for Dutch have been added (contributed
   by Erwin Koning).
+* troff: The ".connectchar" request has been added to customize the set
+  of characters that are drawn as overlapping with the "\l" function.
 * troff/dpost: Embed TrueType fonts without a PostScript field correctly
   (bug reported by FENG Yu Ning).
 * troff: Do not apply font-specific character translation inside \D,
